// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QualificationButtonElement must match the snapshot with default Props 1`] = `
<ButtonStyle
  aria-label="foo"
  as="QualifyButtonStyle"
  color="red"
  onClick={[Function]}
>
  <span
    aria-hidden={true}
  >
    foo
  </span>
  <CounterStyle
    aria-hidden={true}
  >
    +1
  </CounterStyle>
</ButtonStyle>
`;

exports[`QualificationButtonElement must return the diff between snapshot when proposal is qualified or not 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <ButtonStyle
    aria-label="foo"
-   as="UnqualifyButtonStyle"
+   as="QualifyButtonStyle"
    color="red"
    onClick={[Function handleClick]}
  >
    <span
      aria-hidden={true}
@@ -10,8 +10,8 @@
      foo
    </span>
    <CounterStyle
      aria-hidden={true}
    >
-     0
+     +1
    </CounterStyle>
  </ButtonStyle>
`;
